--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,8 @@
 {% block content %}
 {% raw %}
   <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
-    <nav>
-        <ul>
+    <nav class="group">
+        <ul class="navigation">
             <li>{{#link-to 'index'}}Home{{/link-to}}</li>
             <li>{{#link-to 'about'}}About{{/link-to}}</li>
             <li>{{#link-to 'leagues'}}Leagues{{/link-to}}</li>
@@ -14,16 +13,10 @@
     {{outlet}}
   </script>
 
-  <script type="text/x-handlebars" id="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
-  </script>
-
   <script type="text/x-handlebars" id="about">
-    WTF is foosball.io?
+    <section class="wrapper group">
+      <h2>WTF is foosball.io?</h2>
+    </section>
   </script>
 
   <script type="text/x-handlebars" id="leagues">
@@ -31,36 +24,40 @@
   </script>
 
   <script type="text/x-handlebars" id="leagues/index">
-    <h2>Your Leagues</h2>
-    <ul>
-      <li>{{#link-to 'league' 'skinnyscrub'}}Skinny Scrub League{{/link-to}}</li>
-    </ul>
-    <button {{action 'addLeague'}}>Add a league</button>
+    <section class="leagues wrapper">
+      <h2>Your Leagues</h2>
+      <ol>
+        <li>{{#link-to 'league' 'skinnyscrub'}}Skinny Scrub League{{/link-to}}</li>
+      </ol>
+      <button {{action 'addLeague'}}>Add a league</button>
+    </section>
   </script>
 
   <script type="text/x-handlebars" id="league">
-    <h2>{{name}}</h2>
-    <p>Welcome to the {{name}} league!</p>
-    <section>
-      <h1>Players</h1>
-      <ul>
-        <li>{{#link-to 'player' 'p1'}}P1{{/link-to}}</li>
-        <li>{{#link-to 'player' 'p2'}}P2{{/link-to}}</li>
-      </ul>
-    <button {{action 'addPlayer'}}>Add a player</button>
-
+    <section class="wrapper">
+      <h2>{{name}}</h2>
+      <p>Welcome to the {{name}} league!</p>
+      <div class="players">
+        <h3>Players</h3>
+        <ul>
+          <li>{{#link-to 'player' 'p1'}}P1{{/link-to}}</li>
+          <li>{{#link-to 'player' 'p2'}}P2{{/link-to}}</li>
+        </ul>
+        <button {{action 'addPlayer'}}>Add a player</button>
+      </div>
     </section>
     <section>
-      <h1>Games</h1>
-      <ul>
-        <li>{{#link-to 'game' 'g1'}}Game 100{{/link-to}}</li>
-        <li>Game 99</li>
-        <li>Game 98</li>
-        <li>Game 97</li>
-        <li>Game 96</li>
-      </ul>
-      <button {{action 'addGame'}}>Add a game</button>
-
+      <div class="players">
+        <h3>Games</h3>
+        <ul>
+          <li>{{#link-to 'game' 'g1'}}Game 100{{/link-to}}</li>
+          <li>Game 99</li>
+          <li>Game 98</li>
+          <li>Game 97</li>
+          <li>Game 96</li>
+        </ul>
+        <button {{action 'addGame'}}>Add a game</button>
+      </div>
     </section>
   </script>
 
@@ -83,27 +80,30 @@
   </script>
 
   <script type="text/x-handlebars" id="game">
-    <h1>Stats for Game {{name}}</h1>
-    <section>
-      <h1>Home Team Score</h1>
-      <span>{{homeScore}}</span>
-    </section>
-    <section>
-      <h1>Visiting Team Score</h1>
-      <span>{{visitorScore}}</span>
-    </section>
-    <section>
-      <h1>Home</h1>
-      <ul>
-        <li>{{#link-to 'player' 'p1'}}P1{{/link-to}}</li>
-      </ul>
-    </section>
-    <section>
-      <h1>Visitors</h1>
-      <ul>
-        <li>{{#link-to 'player' 'p2'}}P2{{/link-to}}</li>
-      </ul>
-    </section>
+    <div class="wrapper stats">
+      <h2>Stats for Game {{name}}</h2>
+      
+      <section class="scores">
+        <h3>Home Team Score</h3>
+        <span>{{homeScore}}</span>
+      </section>
+      <section class="scores">
+        <h3>Visiting Team Score</h3>
+        <span>{{visitorScore}}</span>
+      </section>
+      <section class="player-info">
+        <h3>Home</h3>
+        <ul>
+          <li>{{#link-to 'player' 'p1'}}P1{{/link-to}}</li>
+        </ul>
+      </section>
+      <section class="player-info">
+        <h3>Visitors</h3>
+        <ul>
+          <li>{{#link-to 'player' 'p2'}}P2{{/link-to}}</li>
+        </ul>
+      </section>
+    </div>
   </script>
 
 {% endraw %}
