--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
 <title>Foosball.io</title>
 {% endblock %}
 {% block css %}
+	<link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Varela+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 {% endblock %}
@@ -13,6 +14,9 @@
 {% endblock %}
 </head>
 <body>
+	<header>
+		<h1 class="wrapper">foosball.io</h1>
+	</header>
   {% block content %}
   {% endblock %}
 
