adding ember-data

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
   <script src="{{ url_for('static', filename='js/libs/jquery-1.10.2.js') }}"></script>
   <script src="{{ url_for('static', filename='js/libs/handlebars-1.1.2.js') }}"></script>
   <script src="{{ url_for('static', filename='js/libs/ember-1.2.0.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/libs/ember-data-1.0.0-beta.4.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="{{ url_for('static', filename='tests/runner.js') }}"></script>
