adding an index template

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,12 @@
     {{outlet}}
   </script>
 
+  <script type="text/x-handlebars" id="index">
+    <section class="wrapper group">
+      <h2>Foosball, jerks!</h2>
+    </section>
+  </script>
+
   <script type="text/x-handlebars" id="about">
     <section class="wrapper group">
       <h2>WTF is foosball.io?</h2>
