--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html ng-app="FoosApp">
 <meta charset="utf-8">
+  <head>
 {% block title %}
 <title>Foosball.io</title>
 {% endblock %}
 {% block css %}
-	<link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Varela+Round' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Varela+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 {% endblock %}
 {% block extracss %}
 {% endblock %}
-</head>
-<body>
+  <script src="http://code.angularjs.org/1.2.8/angular.js"></script>
+  <script src="http://code.angularjs.org/1.2.8/angular-route.js"></script>
+  <script src="{{url_for('static', filename='js/app.js')}}"></script>
+  </head>
+  <body>
 	<header>
 		<h1 class="wrapper">foosball.io</h1>
 	</header>
   {% block content %}
   {% endblock %}
-
   {% block javascript %}
   {% endblock %}
-</body>
+  </body>
 </html>
