working on getting functional league pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,11 @@
     <li>
       <a ng-class="{ active: $location.path() =='/' }" href="/">
         Home</a>
-      <a ng-class="{ active: $location.path() =='/about' }" href="/about">
+    </li>
+    <li><a ng-class="{ active: $location.path() =='/about' }" href="/about">
         About</a>
+    </li>
+    <li>
       <a ng-class="{ active: $location.path() =='/leagues' }" href="/leagues">
         Leagues</a>
     </li>
