--- a/static/templates/leagues.html
+++ b/static/templates/leagues.html
@@ -1,10 +1,9 @@
 <section class="leagues wrapper">
   <h2>Your Leagues</h2>
   <ol>
-    {{#each model}}
-    <li>{{#link-to 'league' id}}{{name}}{{/link-to}}</li>
-    {{/each}}
-
+    <li ng-repeat="league in leagues">
+      <a href="/leagues/{{ league.id }}">{{ league.name }}</a>
+    </li>
   </ol>
-  <button {{action 'addLeague'}}>Add a league</button>
+  <button>Add a league</button>
 </section>
