--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
   <script src="http://code.angularjs.org/1.2.8/angular-route.js"></script>
   <script src="{{url_for('static', filename='js/app.js')}}"></script>
   <script src="{{url_for('static', filename='js/controllers.js')}}"></script>
+  <script src="{{url_for('static', filename='js/directives.js')}}"></script>
   </head>
   <body>
 	<header>
