--- a/static/templates/league.html
+++ b/static/templates/league.html
@@ -1,24 +1,24 @@
 <section class="wrapper">
-  <h2>{{name}}</h2>
-  <p>Welcome to the {{name}} league!</p>
+  <h2>{{league.name}}</h2>
+  <p>Welcome to the {{league.name}} league!</p>
   <div class="players">
     <h3>Players</h3>
     <ul>
-      {{#each player in players}}
-      <li>{{#link-to 'player' player}}{{player.name}}{{/link-to}}</li>
-      {{/each}}
+      <li ng-repeat="player in players">
+        <a ng-href="/players/{{player.id}}">{{player.name}}</a>
+      </li>
     </ul>
-    <button {{action 'addPlayer'}}>Add a player</button>
+    <button>Add a player</button>
   </div>
 </section>
 <section>
   <div class="players">
     <h3>Games</h3>
     <ul>
-      {{#each game in games}}
-      <li>{{#link-to 'game' id game}}{{game.name}}{{/link-to}}</li>
-      {{/each}}
+      <li ng-repeat="game in games">
+        <a ng-href="/games/{{game.id}}">{{game.name}}</a>
+      </li>
     </ul>
-    <button {{action 'addGame'}}>Add a game</button>
+    <button>Add a game</button>
   </div>
 </section>
