--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,9 @@
 {% block title %}
 <title>Foosball.io</title>
 {% endblock %}
+<link rel="icon"
+      type="image/png"
+      href="{{url_for('static', filename='images/favicon.png')}}">
 {% block css %}
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Varela+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
