--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -7,7 +7,7 @@ $drkblue: #233250;
 // Effects
 @mixin easing ($duration){
   -webkit-transition: all $duration cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  transition:         all $duration cubic-bezier(0.455, 0.03, 0.515, 0.955); 
+  transition:         all $duration cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 // Type
@@ -130,7 +130,7 @@ button {
 		border-bottom: dashed 1px $orange;
 		padding: 0 0 .3rem;
 	}
-	.scores { 
+	.scores {
 		list-style-type: none;
 		span {
 			color: $drkblue;
@@ -159,3 +159,11 @@ button {
   display: table;
   clear: both;
 }
+
+// for styling forms we should support these:
+/*
+ng-valid
+ng-invalid
+ng-pristine
+ng-dirty
+*/
