--- a/static/templates/league.html
+++ b/static/templates/league.html
@@ -7,6 +7,7 @@
       <li ng-repeat="player in players">
         <a ng-href="/players/{{player.id}}">{{player.name}}</a>
       </li>
+      <li ng-hide="!players">no players yet!</li>
     </ul>
     <button>Add a player</button>
   </div>
@@ -18,6 +19,7 @@
       <li ng-repeat="game in games">
         <a ng-href="/games/{{game.id}}">{{game.name}}</a>
       </li>
+      <li ng-hide="!games">no games yet!</li>
     </ul>
     <button>Add a game</button>
   </div>
