--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
   <script src="{{url_for('static', filename='js/app.js')}}"></script>
   <script src="{{url_for('static', filename='js/controllers.js')}}"></script>
   <script src="{{url_for('static', filename='js/directives.js')}}"></script>
+  <script src="{{url_for('static', filename='js/lib/angular_flash.js')}}"></script>
   </head>
   <body>
 	<header>
