--- a/static/templates/game.html
+++ b/static/templates/game.html
@@ -1,18 +1,18 @@
 <div class="wrapper stats">
-  <h2>Stats for Game {{name}}</h2>
+  <h2>Stats for Game {{game.name}}</h2>
   <p><a href="/leagues/{{league.id}}">{{league.name}}</a></p>
   <section class="scores">
     <h3>Home Team Score</h3>
-    <span>{{homeScore}}</span>
+    <span>{{game.homeScore}}</span>
   </section>
   <section class="scores">
     <h3>Visiting Team Score</h3>
-    <span>{{visitingScore}}</span>
+    <span>{{game.visitorScore}}</span>
   </section>
   <section class="player-info">
     <h3>Home</h3>
     <ul>
-      <li ng-repeat="player in homeTeam">
+      <li ng-repeat="player in game.homeTeam">
         <a href="/players/{{player.id}}">{{player.name}}</a>
       </li>
     </ul>
@@ -20,7 +20,7 @@
   <section class="player-info">
     <h3>Visitors</h3>
     <ul>
-      <li ng-repeat="player in visitingTeam">
+      <li ng-repeat="player in game.visitorTeam">
         <a href="/players/{{player.id}}">{{player.name}}</a>
       </li>
     </ul>
