--- a/static/templates/game.html
+++ b/static/templates/game.html
@@ -1,4 +1,4 @@
-<div class="wrapper stats">
+<div class="container stats">
   <h2>Stats for Game {{game.name}}</h2>
   <p><a href="/leagues/{{league.id}}">{{league.name}}</a></p>
   <section class="scores">
