--- a/static/templates/league.html
+++ b/static/templates/league.html
@@ -1,4 +1,4 @@
-<section class="wrapper">
+<section class="continer">
   <h2>{{league.name}}</h2>
   <p>Welcome to the {{league.name}} league!</p>
   <div class="players">
