--- a/static/templates/leagues.html
+++ b/static/templates/leagues.html
@@ -1,4 +1,4 @@
-<section class="leagues wrapper">
+<section class="leagues container">
   <h2>Your Leagues</h2>
   <ol>
     <li ng-repeat="league in leagues">
