--- a/static/templates/league_new.html
+++ b/static/templates/league_new.html
@@ -1,4 +1,4 @@
-<section class="leagues wrapper">
+<section class="leagues container">
   <h2>Create a new league!</h2>
   <form name="NewLeague" ng-controller="NewLeagueCtrl">
     <input type="text"
