--- a/static/templates/player.html
+++ b/static/templates/player.html
@@ -1,7 +1,9 @@
-<h1>Stats for Player {{player.name}}</h1>
-<ul>Leagues
-  <li ng-repeat="league in leagues">
-    <a ng-href="/leagues/{{league.id}}">{{league.name}}</a>
-  </li>
-  <li ng-hide="leagues.length">{{player.name}} isn't in any leagues, yet!</li>
-</ul>
+<section class="container">
+<h2>Stats for Player {{player.name}}</h2>
+	<ul>Leagues
+	  <li ng-repeat="league in leagues">
+	    <a ng-href="/leagues/{{league.id}}">{{league.name}}</a>
+	  </li>
+	  <li ng-hide="leagues.length">{{player.name}} isn't in any leagues, yet!</li>
+	</ul>
+</section>
