--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% raw %}
 <flash:messages></flash:messages>
 
-<nav class="group" ng-controller="AppCtrl">
+<nav class="group" ng-controller="NavCtrl">
   <ul class="navigation">
     <li>
       <a ng-class="{active: currentPath == '/'}" class href="/">
