--- a/static/templates/about.html
+++ b/static/templates/about.html
@@ -1,3 +1,15 @@
 <section class="wrapper group">
-  <h2>WTF is foosball.io?</h2>
+    <h2>About</h2>
+
+    <h3>WTF is foosball.io?</h3>
+    <p>
+        <a href="/">Foosball.io</a> helps you run foosball leagues and track statistics.
+    </p>
+
+    <h3>What do I need to create a league?</h3>
+    <p>TBD</p>
+
+    <h3>How do tournaments work</h3>
+    <p>TBD</p>
+
 </section>
