--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,15 @@
 {% endblock %}
 {% block extracss %}
 {% endblock %}
-  <script src="http://code.angularjs.org/1.2.8/angular.js"></script>
-  <script src="http://code.angularjs.org/1.2.8/angular-route.js"></script>
+  <!-- <script src="http://code.angularjs.org/1.2.8/angular.js"></script> -->
+  <!-- <script src="http://code.angularjs.org/1.2.8/angular-route.js"></script> -->
+  <!-- AngularJS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-route.js"></script>
+  <!-- Firebase -->
+  <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
+  <!-- AngularFire -->
+  <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.js"></script>
   <script src="{{url_for('static', filename='js/app.js')}}"></script>
   <script src="{{url_for('static', filename='js/controllers.js')}}"></script>
   <script src="{{url_for('static', filename='js/directives.js')}}"></script>
