--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
   <!-- <script src="http://code.angularjs.org/1.2.8/angular.js"></script> -->
   <!-- <script src="http://code.angularjs.org/1.2.8/angular-route.js"></script> -->
   <!-- AngularJS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.js"></script>
+o  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-route.js"></script>
   <!-- Firebase -->
   <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
